--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ ul{
 .button-grey-block{
     display: flex;
     justify-content: center;
-    margin-top: 0px;
+    margin-top: 94px;
     margin-bottom: 34px;
     padding-left: 0px;
 }
@@ -277,13 +277,9 @@ ul{
     margin-top: 0%;
 }
 /* Команда */
-.section-team-container{
-    outline: 5px greenyellow;
-    
-} 
+
 .section-team{
     background: #F5F4FA;
-    outline: 2px solid teal; 
 }
 .section-people{
     margin-top: 0px;
@@ -328,8 +324,12 @@ ul{
     
     background-color: aqua;
 }
+.project{
+
+}
 .project-item:nth-child(3n){
     margin-right: 0px;
+    
 }
 .project-item:nth-last-child(-n+3){
     margin-bottom: 0px;
