--- a/css/styles.css
+++ b/css/styles.css
@@ -321,8 +321,8 @@ ul{
 
     display: flex;
     flex-wrap: wrap;
-    
-    background-color: aqua;
+    justify-content: center;
+
 }
 .project{
 
