--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,7 @@ body{
     font-family: 'Roboto',sans-serif;
     font-style: normal;
     font-weight: 400;
-    
-    
-    
+    margin: auto;   
 }
 .container{
     width: 1230px;
@@ -27,9 +25,15 @@ body{
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 1px solid red;
+    
 }
-
+.container-port{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
 .container-nav-page{  
     display: flex;
@@ -76,6 +80,7 @@ ul{
     display: flex;
     align-items: center;
     padding-bottom: 25px;
+    
 }
 .basic-linc,
 .basic-linck{
@@ -140,14 +145,9 @@ ul{
 /* Cекции h1 h2 */
 .section-color-black{
     background: var(--section-order-service);
-    outline: 2px solid red;
     margin-top: 0%;
+    margin-bottom: 94px;
     text-align: center;
-    
-
-    
-    
-
 }
 .section-title-h1{
     color : var(--white-color);
@@ -162,11 +162,7 @@ ul{
     padding-top: 200px;
 
 }
-.section-color-black{
-    outline: 2px solid red;
-    margin-bottom: 94px;
 
-}
 .section-title-h2{
     font-weight: 700;
     font-size: 36px;
@@ -265,7 +261,6 @@ ul{
 
     display: inline-flex;
     text-align: start;
-    outline: 2px solid red;
     margin-top: 0%;
     margin-bottom: 94px;
     padding-left: 0px;
@@ -324,9 +319,7 @@ ul{
     justify-content: center;
 
 }
-.project{
 
-}
 .project-item:nth-child(3n){
     margin-right: 0px;
     
@@ -365,8 +358,11 @@ ul{
 
 /* Футер */
 .footer-grey{
-    background-color: var(--section-order-service);   
+    background-color: var(--section-order-service); 
+    margin-bottom: 0px; 
 }
+
+
 .footer-section{
     padding-top: 60px;
     padding-bottom: 60px;
@@ -375,6 +371,8 @@ ul{
 .address{
     color: var(--white-color);
     font-style: normal;
+    margin-top: 20px;
+    margin-bottom: 9px;
 
 }
 .basic-linck-footer .linck-footer{
@@ -382,15 +380,18 @@ ul{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding-bottom: 6px;
-
-    
+    letter-spacing: 0.02em;   
 }
 .basic-linck-footer{
     padding-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     
+}
+.basic-linck-footer li:not(:last-child){
+    padding-bottom: 6px;
 }
 .linck-footer{
     color: var(--blue-color);
+    margin-top: 0px;  
 }
