--- a/css/styles.css
+++ b/css/styles.css
@@ -389,11 +389,11 @@ ul{
 
 }
 .basic-linck-footer .linck-footer{
-    color: var(--basic-text-color);
-    font-weight: 500;
+    font-weight: 400;
     font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;   
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
 .basic-linck-footer{
     padding-left: 0px;
