--- a/css/styles.css
+++ b/css/styles.css
@@ -24,22 +24,16 @@ body{
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
-    padding-right: 15px;
-    outline: 1px solid red;
-    
+    padding-right: 15px;   
 }
 .container-port{
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
-    padding-right: 15px; 
-    outline: 1px solid red;  
-    
+    padding-right: 15px;    
 }
-.border{
-    border-bottom: 1px solid var(--basic-text-color);
-}
+
 
 .container-nav-page{  
     display: flex;
@@ -178,8 +172,7 @@ ul{
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--black-color);
-    margin: 0px 0px; 
-      
+    margin: 0px 0px;     
 }
 
 .button {
@@ -217,14 +210,16 @@ ul{
     letter-spacing: 0.03em;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    
 }
 
 .button-grey-block{
     display: flex;
     justify-content: center;
-    margin-top: 94px;
-    margin-bottom: 34px;
     padding-left: 0px;
+    margin: 0px;
+    padding-top: 94px;
+    margin-bottom: 50px;
 }
 .button-grey-block li:not(:last-child){
     margin-right: 8px;
@@ -322,15 +317,18 @@ ul{
 /* Проект */
 
 .section-block{
-    margin-top: 0px; 
-    margin-right: 0px;
-    margin-bottom: 94px;
+    margin: 0px; 
+    padding-bottom: 94px;
     padding-left: 0px;
 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 
+}
+.project-description{
+    margin: 0px;
+    padding: 20px 0px ;
 }
 
 .project-item:nth-child(3n){
@@ -355,7 +353,8 @@ ul{
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--black-color);
-    
+    margin: 0px;
+    padding-bottom: 4px;
     
 
 }
@@ -365,7 +364,7 @@ ul{
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--basic-text-color);
-    
+    margin: 0px;
     
 }
 
@@ -373,20 +372,20 @@ ul{
 .footer-grey{
     background-color: var(--section-order-service); 
     margin-bottom: 0px; 
-}
-
-
-.footer-section{
     padding-top: 60px;
     padding-bottom: 60px;
 }
 
+
 .address{
     color: var(--white-color);
     font-style: normal;
-    margin-top: 20px;
-    margin-bottom: 9px;
-
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    padding-top: 20px;
+    padding-bottom: 9px;
 }
 .basic-linck-footer .linck-footer{
     font-weight: 400;
