--- a/css/styles.css
+++ b/css/styles.css
@@ -236,9 +236,11 @@ ul{
 .section-picture{
     margin: 0px 0px;
     padding-left: 0px;
+    padding-top: 50px;
     display: flex;
     justify-content: space-around;
     padding-bottom: 94px;
+
     
 }
 
