--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,10 @@ ul{
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--black-color);
-    margin: 0px 0px;     
+    margin-bottom: 50px;
+    margin-top: 0px;
+
+        
 }
 
 .button {
@@ -200,6 +203,7 @@ ul{
 /* Кнопки портфолио */
 }
 
+
 .button-grey{
     font-family: inherit;
     background-color: #F5F4FA;
@@ -210,15 +214,20 @@ ul{
     letter-spacing: 0.03em;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    padding: 6px 22px;
     
 }
 
+.section-port-image{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .button-grey-block{
     display: flex;
     justify-content: center;
     padding-left: 0px;
     margin: 0px;
-    padding-top: 94px;
+    
     margin-bottom: 50px;
 }
 .button-grey-block li:not(:last-child){
@@ -233,16 +242,26 @@ ul{
 
 }
 /* Картинки */
+.section-image{
+    padding-bottom: 94px;
+
+}
+
 .section-picture{
     margin: 0px 0px;
     padding-left: 0px;
     padding-top: 50px;
     display: flex;
     justify-content: space-around;
-    padding-bottom: 94px;  
+      
 }
 
+
 /* Cекции h3 */
+.section{
+    padding: 94px 0px 94px 0px;
+
+}
 
 .main-information{
     font-weight: 700;
@@ -264,7 +283,7 @@ ul{
     display: inline-flex;
     text-align: start;
     margin: auto;
-    padding: 94px 0px 94px 0px;  
+    padding-left: 0px; 
 }
 .item{
     width: 270px;
@@ -279,12 +298,14 @@ ul{
 
 .section-team{
     background: #F5F4FA;
+    padding-top: 50px;
+    padding-bottom: 94px;
 }
 .section-people{
     display: flex;
     justify-content: space-around;
     margin: 0px;
-    padding: 50px 0px 94px;
+    
     
 }
 .section-people li{
@@ -317,7 +338,7 @@ ul{
 
 .section-block{
     margin: 0px; 
-    padding-bottom: 94px;
+    
     padding-left: 0px;
 
     display: flex;
@@ -325,9 +346,10 @@ ul{
     justify-content: center;
 
 }
+
 .project-description{
     margin: 0px;
-    padding: 20px 0px ;
+    padding: 20px 24px ;
 }
 
 .project-item:nth-child(3n){
@@ -375,7 +397,10 @@ ul{
     padding-bottom: 60px;
 }
 
-
+.footer-logo{
+    margin:0px 0px 20px;
+    padding: 0px;
+}
 .address{
     color: var(--white-color);
     font-style: normal;
@@ -383,8 +408,7 @@ ul{
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.03em;
-    padding-top: 20px;
-    padding-bottom: 9px;
+    margin-bottom: 9px;
 }
 .basic-linck-footer .linck-footer{
     font-weight: 400;
@@ -400,9 +424,13 @@ ul{
     
 }
 .basic-linck-footer li:not(:last-child){
-    padding-bottom: 6px;
+    margin-bottom: 6px;
 }
 .linck-footer{
     color: var(--blue-color);
     margin-top: 0px;  
+}
+.footer-info{
+    margin: auto;
+    padding: 0px;
 }
