--- a/css/styles.css
+++ b/css/styles.css
@@ -20,18 +20,11 @@ body{
     margin: auto;   
 }
 .container{
-    width: 1230px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;   
-}
-.container-port{
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
-    padding-right: 15px;    
+    padding-right: 15px;   
 }
 
 
@@ -262,13 +255,13 @@ ul{
 }
 
 .section-picture{
-    margin: 0px 0px;
+    margin: auto;
     padding-left: 0px;
     display: flex;
-    justify-content: space-around;
-    
 }
-
+.section-picture .image:not(:last-child){
+    margin-right: 30px;
+}
 
 /* Cекции h3 */
 .section{
@@ -317,7 +310,8 @@ ul{
 }
 .section-people{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding-left: 0px;
     margin: 0px;
     
     
